@@ -113,7 +113,9 @@ PlayQueueView::PlayQueueView(QWidget *parent)
     setMode(ItemView::Mode_GroupedTree);
     animator.setPropertyName("fade");
     animator.setTargetObject(this);
+    #if ENABLE_VIEW_BACKGROUND
     connect(CurrentCover::self(), SIGNAL(coverImage(QImage)), this, SLOT(setImage(QImage)));
+    #endif
 }
 
 PlayQueueView::~PlayQueueView()
@@ -122,17 +124,18 @@ PlayQueueView::~PlayQueueView()
 
 void PlayQueueView::readConfig()
 {
+    setAutoExpand(Settings::self()->playQueueAutoExpand());
+    setStartClosed(Settings::self()->playQueueStartClosed());
+    setMode((ItemView::Mode)Settings::self()->playQueueView());
+    #if ENABLE_VIEW_BACKGROUND
     int origOpacity=backgroundOpacity;
     int origBlur=backgroundBlur;
     QString origCustomBackgroundFile=customBackgroundFile;
     BackgroundImage origType=backgroundImageType;
-    setAutoExpand(Settings::self()->playQueueAutoExpand());
-    setStartClosed(Settings::self()->playQueueStartClosed());
     backgroundImageType=(BackgroundImage)Settings::self()->playQueueBackground();
     backgroundOpacity=Settings::self()->playQueueBackgroundOpacity();
     backgroundBlur=Settings::self()->playQueueBackgroundBlur();
     customBackgroundFile=Settings::self()->playQueueBackgroundFile();
-    setMode((ItemView::Mode)Settings::self()->playQueueView());
     switch (backgroundImageType) {
     case BI_None:
         if (origType!=backgroundImageType) {
@@ -161,6 +164,7 @@ void PlayQueueView::readConfig()
         }
         break;
     }
+    #endif
 }
 
 void PlayQueueView::saveConfig()
@@ -426,6 +430,7 @@ void PlayQueueView::updatePalette()
 
 void PlayQueueView::setImage(const QImage &img)
 {
+    #if ENABLE_VIEW_BACKGROUND
     if (BI_None==backgroundImageType || (sender() && BI_Custom==backgroundImageType)) {
         return;
     }
@@ -460,6 +465,7 @@ void PlayQueueView::setImage(const QImage &img)
         animator.setEndValue(1.0);
         animator.start();
     }
+    #endif
 }
 
 void PlayQueueView::streamFetchStatus(const QString &msg)
@@ -480,6 +486,7 @@ void PlayQueueView::searchActive(bool a)
 
 void PlayQueueView::drawBackdrop(QWidget *widget, const QSize &size)
 {
+    #if ENABLE_VIEW_BACKGROUND
     if (BI_None==backgroundImageType) {
         return;
     }
@@ -504,6 +511,7 @@ void PlayQueueView::drawBackdrop(QWidget *widget, const QSize &size)
             p.drawPixmap((size.width()-curentBackground.width())/2, (size.height()-curentBackground.height())/2, curentBackground);
         }
     }
+    #endif
 }
 
 #include "moc_playqueueview.cpp"
